# crud-rest-fastapi

./: .env  .env-dev  Dockerfile  Makefile  README.md  docker-compose.yml  init_catalog.sql  main.py  pyproject.toml  pytest.ini
app/: main.py
app/core/: config.py
app/database/: __init__.py  base.py  database_config.py  factory.py  manager.py  models.py  registry.py
app/database/adapters/: mysql_adapter.py
app/middleware/: auth_middleware.py
app/providers/: admin_provider.py  product_provider.py
app/repositories/: admim_repository.py  product_repository.py
app/routers/: admin.py  product.py
app/schemas/: api_admin.py  api_product.py  api_schema.py
app/services/: admin_services.py  base.py  product_services.py  services.py  services_handler.py
app/utils/: auth.py  notifier.py
tests/: .env.test  test_admin.py  test_auth.py  test_auth_middleware.py  test_config.py  test_product.py
