[project]
name = "backend-tech-zebrands"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "pytest>=8.4.1",
    "pytest-dotenv>=0.5.2",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.35.0",
]
